--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
+
+
             </ul>
 
             <!-- Right Section: Social Icons & Phone -->
@@ -101,12 +102,25 @@
             <!-- Left Side: Text Content -->
             <div class="hero-text-content">
                 <div class="hero-subtitle">ELITE K9 GROUP</div>
-                <h1 class="hero-main-title" id="hero-title">TRANSFORM<br>AGGRESSIVE<br>BEHAVIOR<br>INTO TRUST</h1>
-                <p class="hero-description" id="hero-desc">Is your dog's aggression controlling your life? Our expert K9
-                    trainer specializes in training for aggressive dogs. We turn reactivity into reliability through
-                    proven German Shepherd and Belgian Malinois training methods. Reclaim your peace of mind today.</p>
-                <a href="training.html" class="btn-hero-gold" id="hero-cta">FIX AGGRESSION NOW</a>
+
+                <h1 class="hero-main-title" id="hero-title">
+                    TURN<br>
+                    AGGRESSION<br>
+                    INTO CALM,<br>
+                    TRUSTED BEHAVIOR
+                </h1>
+
+                <p class="hero-description" id="hero-desc">
+                    Tired of your dog's out-of-control behavior? Our trainers help dogs chill out, stop reacting, and
+                    become the reliable buddy you’ve always wanted. Let’s get your dog and your life back on track—start
+                    today!
+                </p>
+
+                <a href="training.html" class="btn-hero-gold" id="hero-cta">
+                    GET SUPPORT TODAY
+                </a>
             </div>
+
 
         </div>
 
@@ -138,13 +152,12 @@
         <div class="container grid-2">
             <div class="about-text reveal reveal-slide-left">
                 <h2>Does Your Dog Listen When It Matters Most?</h2>
-                <p>At Elite K9 Group, we don't just teach "sit" and "stay." We forge an unbreakable bond between you and
-                    your dog. As your dedicated <strong>dog trainer near me</strong>, we specialize in <strong>German
-                        Shepherd training near me</strong> and correcting difficult behaviors others can't fix.</p>
-                <p>From <strong>training for aggressive dogs</strong> to building elite <strong>service dog
-                        training</strong> capabilities, our <strong>K9 trainer</strong> methods are rooted in clarity,
-                    fairness, and results. Stop struggling with leash pulling, reactivity, or fear. Start enjoying a
-                    calm, confident companion today.</p>
+                <p>At Elite K9 Group, we’re not about basic commands and boring drills. We help you and your dog
+                    actually connect. As your go-to dog trainer near you, we focus on real behavior change—helping dogs
+                    work through tough habits and become calm, confident companions you can enjoy every day.Whether your
+                    dog struggles with reactivity, leash pulling, fear, or big emotions, we’ve got you. Our training
+                    style is clear, fair, and results-driven, so you’ll see real progress you can feel good about. Stop
+                    stressing on every walk and start enjoying life with a dog you can truly trust.</p>
 
                 <div style="margin: 25px 0; padding: 20px; border-left: 4px solid #d32323; background: #fff;">
                     <h4 style="margin-bottom: 10px; color: var(--text-dark);">They Trust Us</h4>
@@ -162,7 +175,7 @@
                 </div>
 
                 <!-- Added CTA in About for better flow -->
-                <a href="#contact" class="text-link mt-2 text-highlight">See The Transformation &rarr;</a>
+                <a href="consultation.html" class="text-link mt-2 text-highlight">See The Transformation &rarr;</a>
             </div>
             <div class="about-image reveal reveal-zoom">
                 <!-- Image will be inserted here -->
@@ -170,6 +183,20 @@
                     <img src="assets/images/about1-1000x0-c-default.jpg" alt="">
                 </div>
             </div>
+        </div>
+    </section>
+    <!-- Consultation CTA Banner -->
+    <section class="consultation-cta-banner section-padding bg-white text-center">
+        <div class="container reveal reveal-fade-up">
+            <h2 class="section-title mb-4">Ready to level up your dog’s behavior?</h2>
+            <p class="section-subtitle mb-5" style="max-width: 700px; margin-left: auto; margin-right: auto;">
+                Don’t put it off. Tell us a little about your pup, and let’s kick off the journey to a calmer, happier
+                life — one tail wag at a time
+            </p>
+            <a href="consultation.html" class="btn-primary btn-pulse-orange btn-lg"
+                style="padding: 18px 40px; font-size: 1.2rem;">
+                Book a Free Consult
+            </a>
         </div>
     </section>
 
@@ -200,7 +227,7 @@
                             </iframe>
                         </i>
                     </div>
-                    <h3>Dog Boot Camp - Obedience Training</h3>
+                    <h3>Board-and-Train Obedience Training</h3>
                 </div>
                 <div class="video-card">
                     <div class="video-thumbnail">
@@ -211,7 +238,7 @@
                             </iframe>
                         </i>
                     </div>
-                    <h3>Training for Aggressive Dogs - Protection Work</h3>
+                    <h3>Training for Protection Work</h3>
                 </div>
             </div>
         </div>
@@ -555,6 +582,9 @@
             </div>
         </section>
 
+        <!-- Consultation CTA Banner -->
+
+
         <!-- Location Showcase Section -->
         <section class="location-showcase section-padding bg-dark-green text-white">
             <div class="container">
@@ -591,6 +621,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Footer -->
         <footer id="contact" class="footer-new">
@@ -631,7 +662,7 @@
                         <li><a href="available-dogs.html">Dogs for Sale</a></li>
                         <li><a href="future-breeding.html">Future Breeding</a></li>
                         <li><a href="blog.html">Blogs</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#consultation">Contact</a></li>
                     </ul>
                 </div>
 
@@ -642,6 +673,14 @@
                         <div class="location-col">
                             <a href="#">Glendale</a>
                             <a href="#">Los Angeles</a>
+                            <a href="#">Burbank</a>
+                            <a href="#">West Hollywood</a>
+                            <a href="#">Beverly Hills</a>
+                            <a href="#">Studio City</a>
+                            <a href="#">Santa Monica</a>
+                            <a href="#">Calabasas</a>
+                            <a href="#">Pasadena</a>
+                            <a href="#">Malibu</a>
                             <span style="display: block; padding: 5px 0; color: #999;">...</span>
                         </div>
                     </div>
@@ -662,119 +701,18 @@
             <span class="btn-text">Call Us Now</span>
         </a>
 
-        <style>
-            .float-phone-btn {
-                position: fixed;
-                bottom: 30px;
-                right: 30px;
-                width: 75px;
-                height: 75px;
-                background: linear-gradient(135deg, #25d366, #128C7E);
-                color: #fff;
-                border-radius: 50%;
-                text-align: center;
-                font-size: 30px;
-                box-shadow: 0 4px 20px rgba(37, 211, 102, 0.6);
-                z-index: 9999;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-decoration: none;
-                transition: all 0.3s ease;
-                animation: pulse-green 2s infinite;
-            }
-
-            .float-phone-btn:hover {
-                transform: scale(1.1);
-                box-shadow: 0 8px 25px rgba(37, 211, 102, 0.8);
-            }
-
-            .float-phone-btn i {
-                animation: shake-phone 3s infinite;
-            }
-
-            .btn-text {
-                position: absolute;
-                right: 85px;
-                /* Position to the left */
-                background: white;
-                color: #333;
-                padding: 10px 18px;
-                border-radius: 25px;
-                /* Bubble shape */
-                font-size: 15px;
-                font-weight: bold;
-                white-space: nowrap;
-                box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-
-                /* Hidden by default with transform for pop effect */
-                opacity: 0;
-                visibility: hidden;
-                transform: translateX(20px) scale(0.5);
-                transform-origin: right center;
-                transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-                /* Bouncy transition */
-                pointer-events: none;
-            }
-
-            /* Show on hover */
-            .float-phone-btn:hover .btn-text {
-                opacity: 1;
-                visibility: visible;
-                transform: translateX(0) scale(1);
-            }
-
-            /* Bubble Arrow */
-            .btn-text::after {
-                content: '';
-                position: absolute;
-                right: -8px;
-                top: 50%;
-                transform: translateY(-50%);
-                border-top: 8px solid transparent;
-                border-bottom: 8px solid transparent;
-                border-left: 9px solid white;
-            }
-
-            @keyframes pulse-green {
-                0% {
-                    box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
-                }
-
-                70% {
-                    box-shadow: 0 0 0 20px rgba(37, 211, 102, 0);
-                }
-
-                100% {
-                    box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
-                }
-            }
-
-            @keyframes shake-phone {
-
-                0%,
-                90%,
-                100% {
-                    transform: rotate(0deg);
-                }
-
-                92% {
-                    transform: rotate(10deg);
-                }
-
-                94% {
-                    transform: rotate(-10deg);
-                }
-
-                96% {
-                    transform: rotate(10deg);
-                }
-
-                98% {
-                    transform: rotate(-10deg);
-                }
-            }
-        </style>
+        <!-- Voice AI -->
+        <button id="voiceBtn" aria-label="Talk to AI">
+            <i class="fas fa-microphone"></i>
+        </button>
+        <div id="chat-widget" style="display: none;">
+            <div id="chat-header">
+                <span>K9 Assistant</span>
+                <button id="close-chat-btn">&times;</button>
+            </div>
+            <div id="chat"></div>
+        </div>
+        <script src="voice-ai.js"></script>
 
         <script src="script.js"></script>
 </body>
