--- a/training.html
+++ b/training.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
             <!-- Right Section: Social Icons & Phone -->
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="grid-2">
                 <div class="training-content reveal reveal-slide-left">
-                    <h2>Dog Boot Camp & Board Training for Dogs</h2>
+                    <h2>Board & Train Programs for Dogs</h2>
                     <p class="lead">Building a foundation of communication with our dog boarding and training near me
                         programs.</p>
                     <p>Our obedience program is designed for dogs of all ages. We focus on clear communication and
@@ -218,7 +218,7 @@
             <h2>Custom & Advanced Programs</h2>
             <p style="max-width: 700px; margin: 0 auto 30px;">Do you have specific goals? Off-leash hiking, competition
                 obedience, or specific service tasks? We offer private sessions tailored to your exact needs.</p>
-            <a href="#contact" class="btn-primary">Contact Us</a>
+            <a href="contact.html" class="btn-primary">Contact Us</a>
         </div>
     </section>
 
@@ -260,7 +260,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
@@ -271,6 +271,14 @@
                     <div class="location-col">
                         <a href="#">Glendale</a>
                         <a href="#">Los Angeles</a>
+                        <a href="#">Burbank</a>
+                        <a href="#">West Hollywood</a>
+                        <a href="#">Beverly Hills</a>
+                        <a href="#">Studio City</a>
+                        <a href="#">Santa Monica</a>
+                        <a href="#">Calabasas</a>
+                        <a href="#">Pasadena</a>
+                        <a href="#">Malibu</a>
                         <span style="display: block; padding: 5px 0; color: #999;">...</span>
                     </div>
                 </div>
@@ -405,6 +413,18 @@
         }
     </style>
 
+    <!-- Voice AI -->
+    <button id="voiceBtn" aria-label="Talk to AI">
+        <i class="fas fa-microphone"></i>
+    </button>
+    <div id="chat-widget" style="display: none;">
+        <div id="chat-header">
+            <span>K9 Assistant</span>
+            <button id="close-chat-btn">&times;</button>
+        </div>
+        <div id="chat"></div>
+    </div>
+    <script src="voice-ai.js"></script>
     <script src="script.js"></script>
 </body>
 
