--- a/available-dogs.html
+++ b/available-dogs.html
@@ -32,7 +32,7 @@
                 <li class="has-dropdown"><a href="available-dogs.html" class="active">Available Dogs</a></li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="navbar-right">
                 <div class="language-switcher">
@@ -194,7 +194,7 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-locations">
@@ -203,6 +203,14 @@
                     <div class="location-col">
                         <a href="#">Glendale</a>
                         <a href="#">Los Angeles</a>
+                        <a href="#">Burbank</a>
+                        <a href="#">West Hollywood</a>
+                        <a href="#">Beverly Hills</a>
+                        <a href="#">Studio City</a>
+                        <a href="#">Santa Monica</a>
+                        <a href="#">Calabasas</a>
+                        <a href="#">Pasadena</a>
+                        <a href="#">Malibu</a>
                         <span style="display: block; padding: 5px 0; color: #999;">...</span>
                     </div>
                 </div>
@@ -335,6 +343,18 @@
         }
     </style>
 
+    <!-- Voice AI -->
+    <button id="voiceBtn" aria-label="Talk to AI">
+        <i class="fas fa-microphone"></i>
+    </button>
+    <div id="chat-widget" style="display: none;">
+        <div id="chat-header">
+            <span>K9 Assistant</span>
+            <button id="close-chat-btn">&times;</button>
+        </div>
+        <div id="chat"></div>
+    </div>
+    <script src="voice-ai.js"></script>
     <script src="script.js"></script>
     <script>
         // Simple filtering script
