--- a/dog-profile.html
+++ b/dog-profile.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
             <!-- Right Section: Social Icons & Phone -->
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="action-butons" style="margin-top: 30px;">
-                        <a href="#contact" class="btn-primary full-width">Inquire About Max</a>
+                        <a href="contact.html" class="btn-primary full-width">Inquire About Max</a>
                     </div>
 
                 </div>
@@ -192,6 +192,14 @@
                     <div class="location-col">
                         <a href="#">Glendale</a>
                         <a href="#">Los Angeles</a>
+                        <a href="#">Burbank</a>
+                        <a href="#">West Hollywood</a>
+                        <a href="#">Beverly Hills</a>
+                        <a href="#">Studio City</a>
+                        <a href="#">Santa Monica</a>
+                        <a href="#">Calabasas</a>
+                        <a href="#">Pasadena</a>
+                        <a href="#">Malibu</a>
                         <span style="display: block; padding: 5px 0; color: #999;">...</span>
                     </div>
                 </div>
@@ -326,6 +334,18 @@
         }
     </style>
 
+    <!-- Voice AI -->
+    <button id="voiceBtn" aria-label="Talk to AI">
+        <i class="fas fa-microphone"></i>
+    </button>
+    <div id="chat-widget" style="display: none;">
+        <div id="chat-header">
+            <span>K9 Assistant</span>
+            <button id="close-chat-btn">&times;</button>
+        </div>
+        <div id="chat"></div>
+    </div>
+    <script src="voice-ai.js"></script>
     <script src="script.js"></script>
     <script>
         function changeImage(src) {
