--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         <!-- Floating Phone Button -->
         <a href="tel:+18183573797" class="float-phone-btn" aria-label="Call Now">
             <i class="fas fa-phone-alt"></i>
-            <span class="btn-text">Call Us Now</span>
+            <span class="btn-text">Call Us Now!</span>
         </a>
 
         <!-- Voice AI -->
