--- a/consultation.html
+++ b/consultation.html
@@ -41,21 +41,35 @@
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-
+                <li class="mobile-menu-footer">
+                    <div class="language-switcher">
+                        <a href="#" class="lang-btn active" data-lang="en">EN</a>
+                        <span class="lang-divider">|</span>
+                        <a href="#" class="lang-btn" data-lang="es">ES</a>
+                    </div>
+                    <a href="tel:+18183573797" class="phone-number-nav">
+                        <i class="fas fa-phone-alt"></i>
+                        <span>818-357-3797</span>
+                    </a>
+                    <a href="consultation.html" class="btn-primary btn-pulse-orange btn-nav-cta">
+                        Book a Free Consult
+                    </a>
+                </li>
             </ul>
 
             <!-- Right Section -->
             <div class="navbar-right">
                 <div class="language-switcher">
-                    <a href="#" class="lang-btn active" data-lang="en">
-                        <i class="fas fa-globe"></i>
-                        <span>EN</span>
-                    </a>
+                    <a href="#" class="lang-btn active" data-lang="en">EN</a>
                     <span class="lang-divider">|</span>
-                    <a href="#" class="lang-btn" data-lang="es">
-                        <span>ES</span>
-                    </a>
+                    <a href="#" class="lang-btn" data-lang="es">ES</a>
                 </div>
+
+                <!-- Navbar Consultation Button -->
+                <a href="consultation.html" class="btn-primary btn-pulse-orange btn-nav-cta">
+                    Book a Free Consult
+                </a>
+
                 <div class="social-icons-nav">
                     <a href="https://www.instagram.com/elite_k9_group/" target="_blank" aria-label="Instagram"><i
                             class="fab fa-instagram"></i></a>
