--- a/consultation.html
+++ b/consultation.html
@@ -37,7 +37,7 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li class="has-dropdown">
-                    <a href="available-dogs.html">Available Dogs</a>
+                    <a href="available-dogs.html">Dogs For Sale</a>
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
@@ -205,7 +205,6 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-locations">
