--- a/dog-profile.html
+++ b/dog-profile.html
@@ -37,11 +37,10 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li class="has-dropdown">
-                    <a href="available-dogs.html" class="active">Available Dogs</a>
+                    <a href="available-dogs.html" class="active">Dogs For Sale</a>
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li class="mobile-menu-footer">
                     <div class="language-switcher">
                         <a href="#" class="lang-btn active" data-lang="en">EN</a>
@@ -152,7 +151,7 @@
                     </div>
 
                     <div class="action-butons" style="margin-top: 30px;">
-                        <a href="contact.html" class="btn-primary full-width">Inquire About Max</a>
+                        <a href="consultation.html" class="btn-primary full-width">Inquire About Max</a>
                     </div>
 
                 </div>
