--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li class="has-dropdown">
-                    <a href="available-dogs.html">Dogs For Sale </a>
+                    <a href="available-dogs.html">Dogs For Sale</a>
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
@@ -563,9 +563,11 @@
                             <i class="fas fa-plus"></i>
                         </div>
                         <div class="faq-answer">
-                            <p>Our dog training cost varies by program. We offer dog boot camp, board and train dogs
-                                near me, dog boarding and training near me, and doggy boot camp programs. Contact our K9
-                                trainer for service dog training cost and board training for dogs pricing.</p>
+                            <p>Our dog training prices vary depending on the program you choose. We offer board and
+                                train programs, dog boarding with professional training, and private dog training
+                                services near you.
+                                Contact our experienced K9 trainer to learn more about service dog training costs and
+                                board and train pricing tailored to your dog’s needs.</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -675,7 +677,6 @@
                         <li><a href="available-dogs.html">Dogs for Sale</a></li>
                         <li><a href="future-breeding.html">Future Breeding</a></li>
                         <li><a href="blog.html">Blogs</a></li>
-                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
 
