--- a/training.html
+++ b/training.html
@@ -37,11 +37,10 @@
                     <a href="services.html">Services</a>
                 </li>
                 <li class="has-dropdown">
-                    <a href="available-dogs.html">Available Dogs</a>
+                    <a href="available-dogs.html">Dogs For Sale</a>
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li class="mobile-menu-footer">
                     <div class="language-switcher">
                         <a href="#" class="lang-btn active" data-lang="en">EN</a>
@@ -233,7 +232,7 @@
             <h2>Custom & Advanced Programs</h2>
             <p style="max-width: 700px; margin: 0 auto 30px;">Do you have specific goals? Off-leash hiking, competition
                 obedience, or specific service tasks? We offer private sessions tailored to your exact needs.</p>
-            <a href="contact.html" class="btn-primary">Contact Us</a>
+            <a href="consultation.html" class="btn-primary">Contact Us</a>
         </div>
     </section>
 
@@ -275,7 +274,6 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
