--- a/blog.html
+++ b/blog.html
@@ -29,10 +29,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="has-dropdown"><a href="training.html">Training</a></li>
                 <li class="has-dropdown"><a href="services.html">Services</a></li>
-                <li class="has-dropdown"><a href="available-dogs.html">Available Dogs</a></li>
+                <li class="has-dropdown"><a href="available-dogs.html">Dogs For Sale</a></li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html" class="active">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li class="mobile-menu-footer">
                     <div class="language-switcher">
                         <a href="#" class="lang-btn active" data-lang="en">EN</a>
@@ -407,7 +406,6 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-locations">
