--- a/services.html
+++ b/services.html
@@ -37,11 +37,10 @@
                     <a href="services.html" class="active">Services</a>
                 </li>
                 <li class="has-dropdown">
-                    <a href="available-dogs.html">Available Dogs</a>
+                    <a href="available-dogs.html">Dogs For Sale</a>
                 </li>
                 <li><a href="future-breeding.html">Future Breeding</a></li>
                 <li><a href="blog.html">Blogs</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li class="mobile-menu-footer">
                     <div class="language-switcher">
                         <a href="#" class="lang-btn active" data-lang="en">EN</a>
@@ -124,7 +123,7 @@
                         <li><i class="fas fa-check"></i> Gain Total Control</li>
                         <li><i class="fas fa-check"></i> Expert K9 Solutions</li>
                     </ul>
-                    <a href="contact.html" class="btn-primary full-width">Start Your Transformation</a>
+                    <a href="consultation.html" class="btn-primary full-width">Start Your Transformation</a>
                 </div>
 
                 <!-- Advanced Obedience -->
@@ -138,7 +137,7 @@
                         <li><i class="fas fa-dog"></i> Public Access Manners</li>
                         <li><i class="fas fa-dog"></i> Motion Exercises (Sit/Down in Motion)</li>
                     </ul>
-                    <a href="contact.html" class="btn-primary full-width">Learn More</a>
+                    <a href="consultation.html" class="btn-primary full-width">Learn More</a>
                 </div>
 
                 <!-- Personal Protection -->
@@ -154,7 +153,7 @@
                         <li><i class="fas fa-shield-alt"></i> Safe Family Integration</li>
                         <li><i class="fas fa-shield-alt"></i> Elite Service Dog Training</li>
                     </ul>
-                    <a href="contact.html" class="btn-secondary full-width">Secure Your Family Today</a>
+                    <a href="consultation.html" class="btn-secondary full-width">Secure Your Family Today</a>
                 </div>
 
                 <!-- Board & Train -->
@@ -168,7 +167,7 @@
                         <li><i class="fas fa-home"></i> Real World Exposure</li>
                         <li><i class="fas fa-home"></i> Lifetime Support</li>
                     </ul>
-                    <a href="contact.html" class="btn-primary full-width">See Board & Train Options</a>
+                    <a href="consultation.html" class="btn-primary full-width">See Board & Train Options</a>
                 </div>
 
                 <!-- Puppy Development -->
@@ -182,7 +181,7 @@
                         <li><i class="fas fa-paw"></i> Socialization (People/Dogs)</li>
                         <li><i class="fas fa-paw"></i> Crate & Potty Success</li>
                     </ul>
-                    <a href="contact.html" class="btn-primary full-width">Start Right Today</a>
+                    <a href="consultation.html" class="btn-primary full-width">Start Right Today</a>
                 </div>
 
                 <!-- Sport Training -->
@@ -201,7 +200,7 @@
                                 href="https://knpv.nl/ords/r/knpv/ledenweb/knpv-home?tz=4:00" target="_blank"
                                 style="color: inherit; text-decoration: underline;">Official KNPV Website</a></li>
                     </ul>
-                    <a href="contact.html" class="btn-secondary full-width">Prepare Your Dog</a>
+                    <a href="consultation.html" class="btn-secondary full-width">Prepare Your Dog</a>
                 </div>
 
             </div>
@@ -246,7 +245,6 @@
                     <li><a href="available-dogs.html">Dogs for Sale</a></li>
                     <li><a href="future-breeding.html">Future Breeding</a></li>
                     <li><a href="blog.html">Blogs</a></li>
-                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
 
